--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,8 +1,6 @@
 FROM node:14
 COPY package.json ./
 RUN yarn
-COPY index.js ./
-RUN mkdir data
-COPY data/words_list.txt ./data
+COPY . .
 EXPOSE 3002
 CMD ["node", "index.js"]
