--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "1.0.0",
   "description": "Simple Register form",
   "main": "index.js",
+  "engines": {
+    "node": ">=12",
+    "yarn": ">=1.13.0 <2"
+  },
   "scripts": {
-    "lint": "eslint src/client --ext .ts,.tsx,.js",
+    "lint": "eslint src/client --ext .ts,.tsx",
     "lint:fix": "yarn run lint --fix",
     "stylelint": "stylelint ./src/client/assets/*.scss",
     "stylelint:fix": "stylelint ./src/client/assets/*.scss --fix",
     "database:init": "docker-compose run server node seed.js",
-    "server:up": "docker-compose up --build",
+    "server:up": "docker-compose up --build -d",
     "server:stop": "docker-compose down",
     "server:restart": "yarn run server:stop && yarn run server:up",
-    "bootstrap": "yarn && cd ./src/server && yarn && cd ../../ && yarn run database:init",
+    "bootstrap": "yarn && yarn run server:up && sleep 5 && yarn run database:init",
     "build": "rollup -c",
     "start": "rollup -c -w NODE_ENV=development",
-    "test": "-"
+    "test": "jest"
   },
   "pre-commit": [
     "lint:fix",
@@ -41,11 +45,14 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.24",
     "@types/node-sass": "^4.11.2",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "babel-jest": "^27.0.6",
     "cssnano": "^4.1.10",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -55,6 +62,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
     "node-sass": "^6.0.1",
     "postcss": "^8.2.1",
     "pre-commit": "^1.2.2",
@@ -67,6 +75,7 @@
     "stylelint-config-standard": "^22.0.0",
     "stylelint-declaration-strict-value": "^1.7.12",
     "stylelint-scss": "^3.19.0",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
   },
   "dependencies": {
