--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript-eslint/parser": "^4.15.1",
     "babel-jest": "^27.0.6",
     "cssnano": "^4.1.10",
+    "dotenv": "^10.0.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -67,6 +68,7 @@
     "postcss": "^8.2.1",
     "pre-commit": "^1.2.2",
     "rollup": "^2.53.1",
+    "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.1.0",
