--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "postcss": "^8.2.1",
     "pre-commit": "^1.2.2",
     "rollup": "^2.53.1",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-replace": "^2.2.0",
